2000-05-06  Chris Toshok  <toshok@helixcode.com>

	* e-cell-text.c (ect_accept_edits): only to set_value_at if the
	value is indeed different.
	(ect_stop_editing): free edit->cell.starting_text
	(build_current_cell): initialize edit->cell.starting_text as a
	copy of the initial text.

2000-05-06  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-group-container.c, e-table.c: Killed some warnings.

2000-05-04  Chris Toshok  <toshok@helixcode.com>

	* e-table-sorted-variable.c (etsv_sort): use rows here instead of
	E_TABLE_SUBSET(etsv)->n_map, since the table can be populated by
	the gtk_main_iteration above.  otherwise the vals_closure may not
	be fully populated.

2000-05-04  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-group-container.c, e-table-group-leaf.c,
	e-table-group.c, e-table-group.h: Add an e_table_group_add_all
	function and implement it in the different ETableGroup classes.

	* e-table-sort-info.c: Make set_nth not call changed twice if it
	needs to allocate more space.

	* e-table-sorted-variable.c, e-table-subset-variable.c,
	e-table-subset-variable.h: Add and implement an
	e_table_subset_variable_add_all command.

	* e-table.c: Use e_table_group_add_all as appropriate.  Fix ETable
	grouping xml to work if there is a text element at the bottom of
	the grouping tree.

2000-05-04  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.c: Sped up e_cell_text's get_height function.

2000-05-04  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-item.c, e-table-item.h: Added a height_cache idle loop
	so that the height_cache will be validated in the idle loop.

2000-05-04  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-sorted-variable.c: Load all the data to be sorted by
	before actually doing the sort.

2000-05-04  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.c, e-cell-text.h: Fix author information.

	* e-table-group-leaf.c: Set a length threshold of 200.
