@@ -1,3 +1,14 @@
+2000-05-07  Christopher James Lahey  <clahey@helixcode.com>
+
+	* e-table-item.c, e-table-item.h, e-table.c, e-table.h: Handle
+	row_inserted and row_deleted signals properly.
+
+	* e-table-model.c, e-table-model.h: Created the row_inserted and
+	row_deleted signals.
+
+	* e-table-sorted-variable.c, e-table-subset-variable.c: Emit the
+	row_inserted and row_deleted signals as appropriate.
+
 2000-05-06  Chris Toshok  <toshok@helixcode.com>
 
 	* e-cell-text.c (ect_accept_edits): only to set_value_at if the
